# monorepo

./: .gitignore  LICENSE  README.md
YOLO/: test_yolo.py  train_FRED_model.py
YOLO-training-server/: README.md  batch_run.sh  exporter.py  inference_multi_backend.py  inference_with_tracking.py  opt_inference_with_tracking.py  prepare_fred_dataset.py  pyproject.toml  test_yolo.py  tracks.csv  tracks_rgb.csv  train_FRED_model.py  trajectories.py
app/backend/: README.md  app.js  package-lock.json  package.json
app/backend/agent/: agent.js
app/frontend/: README.md  package-lock.json  package.json
app/frontend/src/app/dashboard/: page.jsx
dd5000/: README.md  profile_k-means.txt  profile_whole_running.txt  pyproject.toml
dd5000-gigachad-variant/: pyproject.toml
dd5000-gigachad-variant/src/: config.py  kmeans.py  main.py  rpm_calculator.py  rpm_estimator_loop.py  stream_rpm_calculations.py
dd5000-gigachad-variant/src/evio_lib/: index_scheduler.py  play_dat.py
dd5000/profiling/: running_times.txt
dd5000/src/: __init__.py  blade_tracker.py  config.py  kmeans.py  logger.py  main.py  models.py  profiling.py  pure_rpm_calculations.py  rmp_estimator.py  rpm.py  utils.py  yolo.py
dd5000/src/evio_imports/core/: index_scheduler.py  pacer.py
dd5000/src/evio_lib/: dat_file.py  pacer.py
dd5000/src/tests/: test_kmeans.py
dd5000/tests/: test_kmeans.py  test_non_functional.py
predictor/: README.md  pyproject.toml
predictor/src/: config.py  dat_file.py  index_scheduler.py  logging_utils.py  main.py  pacer.py  utils.py
predictor/src/evio_in/: dat_file.py  ev_rpm_pipeline.py  evio_player_aoi.py  index_scheduler.py  mmap.py  pacer.py  play_dat.py
predictor/src/knn/: knn.py
predictor/src/roo/: aoi_detection.py  config.py  kmeans.py  rotating_object_extraction.py
predictor/src/rpm_estimation/: README.md  aoi_detection.py  kmeans.py  rpm_estimation.py
predictor/src/rse/: rpm_estimation.py
predictor/src/yolo/: yolo.py
predictor/src/yolo-stuff/: main.py
predictor/tests/: test_non_functional.py
pyntcloud-implementation/: README.md  main.py  pyproject.toml  test.py
pyntcloud-implementation/src/: config.py  main.py  ply_creator.py  predict.py
rpm-calculator/: README.md  calculate_rpm.py  calculate_rpm_old.py  frequency.py  frequency_old.py  pyproject.toml  run_calculator.py
rpm-calculator/scripts/: play_dat.py
