[project]
name = "dd5000"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clip",
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.3.228",
]

[tool.uv.sources]
ultralytics = { git = "https://github.com/ultralytics/ultralytics.git", rev = "main" }
clip = { git = "https://github.com/ultralytics/CLIP.git" }
