[project]
name = "dd5000"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clip",
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.3.228",
    "pytest>=9.0.0",
    "scikit-learn>=1.7.2",
    "ruff>=0.14.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv.sources]
ultralytics = { git = "https://github.com/ultralytics/ultralytics.git", rev = "main" }
clip = { git = "https://github.com/ultralytics/CLIP.git" }
