[project]
name = "predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.228",
    "scikit-learn>=1.7.2",
    "clip",
]

[tool.uv.sources]
clip = { git = "https://github.com/ultralytics/CLIP.git" }
